Bug 299713 - Message Tags aren't working correctly
Summary: Message Tags aren't working correctly
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: message list (other bugs)
Version First Reported In: unspecified
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-05-09 23:22 UTC by Kevin Clevenger
Modified: 2012-05-19 11:52 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kevin Clevenger 2012-05-09 23:22:31 UTC
I have assigned a color and icon to the Message Tag 'Follow Up'. If I tag an email in my inbox with Follow Up the icon is not applied but the generic mail-and-envelope icon is used. The color is applied only after that message has lost focus in the message list.

Reproducible: Always

Steps to Reproduce:
1. Customize the color and icon for a Message Tag
2. Right-click on an email and select message tag
3. 
Actual Results:  
Color and only generic icon are applied but only after message loses focus.

Expected Results:  
Custom icon and color should be applied correctly and immediately. 

Fedora 16, Kmail 4.8.2, IMAP server is Zimbra 7.1.2
Comment 1 Jerzy Luszawski 2012-05-16 00:59:54 UTC
I confirm this behavior.
Actually, in my case, the right color is applied when the *message list pane* gets focus again. It is not enough to move to another message within the pane.

Ubuntu 12.4 ; Qt: 4.8.1 ; KDE: 4.8.2 (4.8.2) ; KMail: 4.8.2
Comment 2 Laurent Montel 2012-05-16 17:22:02 UTC
I confirm it.
Will look at soon
Comment 3 Laurent Montel 2012-05-19 11:50:04 UTC
Git commit 640172a776c27520d33d8aa0c820f32e276058b5 by Montel Laurent.
Committed on 19/05/2012 at 13:48.
Pushed by mlaurent into branch 'master'.

Fix Bug 299713 - Message Tags aren't working correctly

Thanks 	Christian Mollekopf to help me.
I will port to Nepomuk::ResourceWatcher when kdepim will depend against
nepomuk-core

FIXED-IN: 4.8.4

M  +7    -2    messagelist/storagemodel.cpp

http://commits.kde.org/kdepim/640172a776c27520d33d8aa0c820f32e276058b5
Comment 4 Laurent Montel 2012-05-19 11:52:43 UTC
Git commit 63e5d32e24a17acc03358564b38b8fc208e66126 by Montel Laurent.
Committed on 19/05/2012 at 13:48.
Pushed by mlaurent into branch 'KDE/4.8'.

Fix Bug 299713 - Message Tags aren't working correctly

Thanks 	Christian Mollekopf to help me.
I will port to Nepomuk::ResourceWatcher when kdepim will depend against
nepomuk-core

FIXED-IN: 4.8.4
(cherry picked from commit 640172a776c27520d33d8aa0c820f32e276058b5)

M  +7    -2    messagelist/storagemodel.cpp

http://commits.kde.org/kdepim/63e5d32e24a17acc03358564b38b8fc208e66126