Fix Bug 299713 - Message Tags aren't working correctly

Thanks 	Christian Mollekopf to help me.
I will port to Nepomuk::ResourceWatcher when kdepim will depend against
nepomuk-core

FIXED-IN: 4.8.4
BUG: 299713
(cherry picked from commit 640172a776c27520d33d8aa0c820f32e276058b5)